src/components/status.css
/* ... */
a.card:is(:hover, :focus):visited {
  border-color: var(--link-visited-color);
}
.card.video {
  max-width: 320px;
  max-height: 320px;
  cursor: pointer;

  lite\-youtube {
    pointer-events: none;
  }
}
.card.video iframe {
  width: 100%;
  height: 100%;
}
.card.card-post {
  flex-direction: row-reverse;

  .title {
    font-weight: 500;
    display: block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .meta {
    white-space: pre-line;
    -webkit-line-clamp: 10;
    line-clamp: 10;
    opacity: 1;
    /* font-size: inherit; */
  }

  .card-image {
    border-inline-end: 0;
    border-inline-start: 1px solid var(--outline-color);
  }
}
.status.large .card.large.card-post,
.status-carousel
  .content-container[data-content-text-weight='1']
  .card.large.card-post {
  flex-direction: column-reverse;
}
.card-byline-author {
  display: inline-flex;
  gap: 4px;
  color: var(--text-insignificant-color);
  padding: 2px 8px;
  align-items: flex-start;

  .icon {
    min-height: 1em;
  }

  .avatar {
    width: 16px !important;
    height: 16px !important;
    opacity: 0.8;
    vertical-align: middle;
  }
}

/* POLLS */

.poll {
  display: inline-block;
  transition: opacity 0.2s ease-in-out;
  margin-top: 8px;
  border-radius: 16px;
  border: 1px solid var(--outline-color);
  background-color: var(--bg-faded-color);
  background-image: linear-gradient(
    to bottom,
    var(--bg-color) 50%,
    var(--bg-faded-color)
  );
  /* overflow: hidden; */
  box-shadow: inset 0 0 0 1px var(--bg-color);
  min-width: 50%;

  &.loading {
    opacity: 0.5;
    pointer-events: none;
  }
  &.read-only {
    pointer-events: none;
  }

  .poll-options {
    display: flex;
    flex-direction: column;
    gap: 4px;
    padding: 4px;
    max-height: min(60svh, 19em);
    overflow-y: auto;

    &.truncated {
      border-block-end: 1px solid var(--outline-color);
      background-image: linear-gradient(
        to top,
        var(--bg-color),
        transparent 32px
      );

      + .poll-actions {
        box-shadow:
          inset 0 1px var(--bg-color),
          inset 0 8px 16px -8px var(--outline-color);
      }
    }
  }

  .poll-option {
    padding: 4px 8px;
    display: flex;
    gap: 16px;
    justify-content: space-between;
    align-items: center;
    position: relative;

    .poll-options.truncated & {
      content-visibility: auto;
      content-intrinsic-size: auto 1.5lh;
    }

    &:has(> label) {
      padding: 0;

      > label {
        padding: 4px 8px;
      }
    }

    > * {
      z-index: 1;
    }

    &:after {
      content: '';
      position: absolute;
      inset: 0;
      border-radius: 4px;
      background-color: var(--link-bg-color);
      opacity: 0;
      pointer-events: none;
      transition: all 0.2s ease-in-out;
      z-index: 0;
    }
    &:not(.poll-result):is(:active, :focus-within):after {
      transition-duration: 0s;
      background-color: var(--link-faded-color);
    }
    @media (hover: hover) {
      &:hover:after {
        opacity: 1;
      }
    }
    &:first-child:after {
      border-start-start-radius: 12px;
      border-start-end-radius: 12px;
    }
    &.poll-result:after {
      width: var(--percentage);
      opacity: 1;
      background-image: linear-gradient(
        to top,
        var(--link-faded-color) 3px,
        transparent 3px
      );
      transform-origin: var(--backward);
      animation: poll-bar-fill 0.5s var(--timing-function) forwards;
    }
    &.poll-result.poll-option-leading:after {
      background-image: linear-gradient(
        to top,
        var(--link-color) 3px,
        transparent 3px
      );
    }
  }

  .poll-label {
    width: 100%;
    display: flex;
    gap: 8px;
    cursor: pointer;
    z-index: 1;

    input:is([type='radio'], [type='checkbox']) {
      flex-shrink: 0;
      margin: 0 3px;
      min-height: 1.15em;
      accent-color: var(--link-color);
    }
  }

  .poll-option-votes {
    flex-shrink: 0;
    font-size: 90%;
    line-height: 1;
    display: flex;
    gap: 4px;
    align-items: center;

    .poll-option-votes-percentage {
      opacity: 0.75;

      .poll-option-leading & {
        font-weight: bold;
        opacity: 1;
      }
    }

    .icon {
      vertical-align: text-bottom;
      color: var(--link-color);
    }
  }

  .poll-actions {
    display: flex;
    gap: 8px;
    align-items: center;
    padding-block: 8px 0;
    padding-inline: 12px 8px;

    > * {
      flex: 1;
    }

    button:disabled {
      filter: grayscale(1);
    }
  }

  .poll-meta {
    color: var(--text-insignificant-color);
    margin: 8px 16px;
    margin-inline-end: 8px;
    font-size: 90%;
    display: flex;
    gap: 4px;
    user-select: none;
    line-height: 1.3;
    align-items: center;

    > button:first-child {
      margin-inline-start: -8px;
    }
  }

  .poll-option-title {
    text-shadow: 0 1px var(--bg-color);
    line-height: 1.2;
  }
}

/* EXTRA META */

.status .extra-meta {
  padding-top: 8px;
  color: var(--text-insignificant-color);
  font-size: 90%;
}
.status .extra-meta .icon {
  vertical-align: text-bottom;
}
.status .extra-meta a {
  color: inherit;
  text-decoration: none;
  vertical-align: baseline;
  text-decoration-thickness: 1px;
  text-underline-offset: 3px;
}
.status .extra-meta a:is(:hover, :focus) {
  text-decoration: underline;
}
.status .extra-meta .edited:is(:hover, :focus) {
  cursor: pointer;
  color: var(--text-color);
}
.status.large .extra-meta {
  padding-top: 0;
  margin-inline-start: calc(-50px - 16px);
}

/* EMOJI REACTIONS */

.status.large .emoji-reactions {
  cursor: default;
  margin-inline-start: calc(-50px - 16px);
}

/* ACTIONS */

.status .actions {
  display: flex;
  gap: 8px;
}
.status.large .actions {
  padding-top: 4px;
  padding-bottom: 16px;
  margin-inline-start: calc(-50px - 16px);
  color: var(--text-insignificant-color);
  border-top: var(--hairline-width) solid var(--outline-color);
  margin-top: 8px;
}
/* ... */

